--- a/app/views/catalogues/_catalogue.haml
+++ b/app/views/catalogues/_catalogue.haml
@@ -7,5 +7,5 @@
         .col-4.text-right
           %button.js--edit-button.btn.btn-warning.btn-sm{type: 'button', 'data-toggle' => 'modal', 'data-target' => '#editCatalogueModal', 'data-id' => catalogue.id}
             %i.far.fa-edit
-          = link_to catalogue_path(id: catalogue.id), method: :delete, class: "btn btn-danger sm-btn" do
+          %button.js--delete-catalogue-button.btn.btn-danger.btn-sm{type: 'button', 'data-id' => catalogue.id}
             %i.far.fa-trash-alt
