--- a/app/views/layouts/_menu_bar.haml
+++ b/app/views/layouts/_menu_bar.haml
@@ -1,15 +1,17 @@
 %nav.navbar.navbar-expand-lg.navbar-light.bg-light
   .container
-    %a.navbar-brand(href="#") Catalogue App
+    = link_to root_path, class: "navbar-brand" do
+      Catalogue App
     %button.navbar-toggler{ type: "button", data_toggle: "collapse", data_target: "#navbar", aria_controls: "navbar", aria_expanded: "false", aria_label: "Toggle navigation" }
       %span.navbar-toggler-icon
     .collapse.navbar-collapse#navbar
       %ul.navbar-nav.mr-auto
         %li.nav-item
           = link_to catalogues_path, class: "nav-link" do
-            Catalogues
+            = t(".catalogues")
         %li.nav-item
-          %a.nav-link(href="#") Sections
+          = link_to sections_path, class: "nav-link" do
+            = t(".sections")
         %li.nav-item
           %a.nav-link(href="#") Products
       = link_to destroy_user_session_path, method: :delete, class: "btn btn-primary" do
