--- a/app/views/sections/_new_section_form_modal.haml
+++ b/app/views/sections/_new_section_form_modal.haml
@@ -7,7 +7,7 @@
         %button.btn-close{'data-dismiss' => 'modal', 'aria-label' => 'close'}
           %span{'aria-hidden' => true}
             &times;
-      = form_for [:catalogue, section] do |f|
+      = form_for [catalogue, section], method: :post do |f|
         .modal-body
           - if section.errors.any?
             .alert.alert-danger
@@ -15,7 +15,8 @@
                 - section.errors.full_messages.each do |msg|
                   %li= msg
           .row
-            = f.hidden_field :catalogue_id, value: catalogue.id
+            - if defined?(catalogue) && !catalogue.nil?
+              = f.hidden_field :catalogue_id, value: catalogue.id
             .col-12
               .form-group
                 = f.label :name
