--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,4 +1,5 @@
 @import "bootstrap"
+@import "bootstrap4c-chosen/dist/css/component-chosen.min.css"
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts'
 @import '@fortawesome/fontawesome-free/scss/fontawesome'
 @import '@fortawesome/fontawesome-free/scss/solid'
