--- a/app/views/catalogues/_new_catalogue_form_modal.haml
+++ b/app/views/catalogues/_new_catalogue_form_modal.haml
@@ -3,7 +3,7 @@
     .modal-content
       .modal-header
         %h5.modal-title#newCatalogueModalLabel
-          New Catalogue
+          = t(".title")
         %button.btn-close{'data-dismiss' => 'modal', 'aria-label' => 'close'}
           %span{'aria-hidden' => true}
             &times;
@@ -21,4 +21,4 @@
                 = f.text_field :name, class: "form-control"
         .modal-footer
           %button.btn.btn-primary(type="submit")
-            Create catalogue
+            = t('.submit')
