--- a/app/assets/stylesheets/styles.sass
+++ b/app/assets/stylesheets/styles.sass
@@ -1,2 +1,11 @@
+.card
+  margin-bottom: 15px
+
 .container
   padding-top: 1rem
+
+.edit-button
+  margin: 0px 5px
+
+.submit-button
+  margin-top: 20px
