--- a/app/views/catalogues/_edit_catalogue_form_modal.haml
+++ b/app/views/catalogues/_edit_catalogue_form_modal.haml
@@ -3,7 +3,7 @@
     .modal-content
       .modal-header
         %h5.modal-title#editCatalogueModalLabel
-          Edit Catalogue
+          = t(".title")
         %button.btn-close{'data-dismiss' => 'modal', 'aria-label' => 'close'}
           %span{'aria-hidden' => true}
             &times;
@@ -16,4 +16,4 @@
                 = f.text_field :name, class: "form-control js--name-field"
         .modal-footer
           %button.js--submit-button.btn.btn-primary(type="submit")
-            Update catalogue
+            = t(".submit")
