--- a/app/views/catalogues/index.haml
+++ b/app/views/catalogues/index.haml
@@ -1,10 +1,10 @@
 .container
   .row
     .col-8
-      %h1 Catalogues
+      %h1= t(".title")
     .col-4.text-right
       %button.btn.btn-success{type: 'button', 'data-toggle' => 'modal', 'data-target' => '#newCatalogueModal'}
-        New catalogue
+        = t(".new_catalogue")
   .row
     .col-12
       %ul.nav.nav-tabs
