--- a/app/views/sections/_new_section_form_modal.haml
+++ b/app/views/sections/_new_section_form_modal.haml
@@ -3,7 +3,7 @@
     .modal-content
       .modal-header
         %h5.modal-title#newCatalogueModalLabel
-          = t(".new_section")
+          = t(".title")
         %button.btn-close{'data-dismiss' => 'modal', 'aria-label' => 'close'}
           %span{'aria-hidden' => true}
             &times;
@@ -23,4 +23,4 @@
                 = f.text_field :name, class: "form-control"
         .modal-footer
           %button.btn.btn-primary(type="submit")
-            = t(".create_section")
+            = t(".submit")
