--- a/app/views/catalogues/index.haml
+++ b/app/views/catalogues/index.haml
@@ -1,7 +1,7 @@
 .container
   .row
     .col-8
-      %h1= t(".title")
+      %h1.title= t(".title")
     .col-4.text-right
       %button.btn.btn-success{type: 'button', 'data-toggle' => 'modal', 'data-target' => '#newCatalogueModal'}
         = t(".new_catalogue")
