--- a/app/views/layouts/_menu_bar.haml
+++ b/app/views/layouts/_menu_bar.haml
@@ -2,7 +2,7 @@
   .container
     = link_to root_path, class: "navbar-brand" do
       = t(".catalogue_app")
-    %button.navbar-toggler{ type: "button", data_toggle: "collapse", data_target: "#navbar", aria_controls: "navbar", aria_expanded: "false", aria_label: "Toggle navigation" }
+    %button.navbar-toggler{ type: "button", "data-toggle": "collapse", "data-target": "#navbar", "aria-controls": "navbar", "aria-expanded": "false", "aria-label": "Toggle navigation" }
       %span.navbar-toggler-icon
     .collapse.navbar-collapse#navbar
       %ul.navbar-nav.mr-auto
