Upgrade project to Ruby 3.0.1

--- a/app/views/layouts/_menu_bar.haml
+++ b/app/views/layouts/_menu_bar.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-expand-lg.navbar-light.bg-light
+%nav.navbar.navbar-expand-lg.navbar-light.bg-light#menu-bar
   .container
     = link_to root_path, class: "navbar-brand" do
       = t(".catalogue_app")
